@@ -1,3 +1,8 @@
+2012-01-10  WOnder93  <omosnacek@gmail.com>
+
+	* Interfaces.cs:
+	  This file was supposed to be deleted long ago...
+
 2012-01-03  WOnder93  <omosnacek@gmail.com>
 
 	* AssemblyInfo.cs:
